updated at: 2023-04-25 21:37, Glock17 pistol - yay - BOOTH

--- a/VRChat/32/1316832.html
+++ b/VRChat/32/1316832.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sGyFEvaosS4fSpKMjGFAxVNdMZ09Dif18hncDkAnA4s="></script>
+    "0ZNCaYbu/eJdsO+bqR75raVgI0Qm0+K4HhN+lXASXNw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Glock17 pistol","description":"Glock17 first Item in my shop\n\n[Polygon]\n\nFaces - 3888\nTris  - 7620\n\n[Texture]\n\nBasement\nMetallic\nNormal\n\n2048x2048\n\n[File]\n\nGlock17.Unitypackage\n(6,740KB)\n\nMore_Texture\nBasement_\n         Black      (1,078KB)\n         TAN        (1,147KB)\n         Pink       (1,274KB)\n         Kry.Nomad  (1,485KB)\n         Kry.Pontus (1,651KB)\n\nKryptek Camo's Copyright is at Kryptek Outdoor Group, LLC\n\n[Email]\n\nphecrys@gmail.com \n\n\n--------------------------\n\nThx for watching my model\n\nI'm Korean Student in Highschool\nim not well japanese but i really want\nbuy vr machine and i found this site","url":"https://booth.pm/ja/items/1316832","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1316832/14e20f42-12a1-4ce0-b42f-b35c03718cd1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sGyFEvaosS4fSpKMjGFAxVNdMZ09Dif18hncDkAnA4s="></script>
+    nonce="0ZNCaYbu/eJdsO+bqR75raVgI0Qm0+K4HhN+lXASXNw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1316832/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1316832/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
