updated at: 2023-04-25 21:37, キッシュちゃん用ネコストッキング - らぼてん - BOOTH

--- a/VRChat/11/1382911.html
+++ b/VRChat/11/1382911.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5wWl6ZmLLm0eaji4rpCPmccmlk6UCaWazomo08v0IOE="></script>
+    "o3QpcjIHV/6KXKmBKLlYfIXK6NVIHOBDZ+XvrttMA3o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キッシュちゃん用ネコストッキング","description":"Twitterにて頒布していたキッシュちゃん(https://mutachannel.booth.pm/items/954376)用のネコストッキング素材です(https://twitter.com/tenteeeee_vrc/status/1088403973298503681)。\nUV展開を改変していなければ上から重ねるだけの透過PNGです。\nねこ成分を増やしたい方はぜひ！","url":"https://booth.pm/ja/items/1382911","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1382911/4b13298c-8964-480b-95ff-514c0221f09c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5wWl6ZmLLm0eaji4rpCPmccmlk6UCaWazomo08v0IOE="></script>
+    nonce="o3QpcjIHV/6KXKmBKLlYfIXK6NVIHOBDZ+XvrttMA3o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1382911/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               708
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1382911/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               708
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
