--- a/VRChat/95/1381895.html
+++ b/VRChat/95/1381895.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UApnCPEydx6K9rSlfNqCl6UaLkSqBNNW4P16G7I21JE="></script>
+    "v4RTUZRFGkus7r5d5FRGWnEVhnyF5m8DCF/TxUWdiQ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅぺん アートタオル","description":"とある配信で描いたアートから生まれたタオル。VRのすきまに暮らすペンギン、おきゅぺんです。リアルグッズだけど……ええっと、夏だし、ペンギンだし…ちょうどいいんじゃない！？\n\nhttps://youtu.be/NqgJrY08Bx0?t=2658\n\nかわいいって言ってくれるひとがいたので、まさかの公式グッズ化＞＜　VRChatで描いた配信をキャプチャしたものが元なので解像度低めです。\n\n※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n\n※小と大で形やサイズが違うので注意してね。","url":"https://booth.pm/ja/items/1381895","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2500","highPrice":"2800"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1381895/f649f1eb-f874-48f4-87d6-098bd9ecdaaf_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UApnCPEydx6K9rSlfNqCl6UaLkSqBNNW4P16G7I21JE="></script>
+    nonce="v4RTUZRFGkus7r5d5FRGWnEVhnyF5m8DCF/TxUWdiQ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1381895/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1381895/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               3
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -420,7 +421,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/17</span>
+                                        "autolink u-text-wrap">2023/05/18</span>
                                       </div>
                                     </div>
                                   </div>
@@ -448,7 +449,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/17</span>
+                                        "autolink u-text-wrap">2023/05/18</span>
                                       </div>
                                     </div>
                                   </div>
