--- a/VRChat/78/1381878.html
+++ b/VRChat/78/1381878.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NuaT1Tz8ySbD0pyo6yaWR9tLH84ea99ap7syL9QfVZ0="></script>
+    "TWMgnROtq+Pdk4PDIeUmXoA78iuyerwLqcHasFs9gEE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅぺん アートTシャツ（白）","description":"とある配信で描いたアートから生まれたTシャツ。VRのすきまに暮らすペンギン、おきゅぺんです。リアルグッズだけど……ええっと、いいの…？\n\nhttps://youtu.be/NqgJrY08Bx0?t=2658\n\nかわいいって言ってくれるひとがいたので、まさかの公式グッズ化＞＜　VRChatで描いた配信をキャプチャしたものが元なので解像度低めです。\n\n※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1381878","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1950","highPrice":"1950"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1381878/3bbbd7d7-cef5-4054-b832-e09246e03221_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NuaT1Tz8ySbD0pyo6yaWR9tLH84ea99ap7syL9QfVZ0="></script>
+    nonce="TWMgnROtq+Pdk4PDIeUmXoA78iuyerwLqcHasFs9gEE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1381878/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1381878/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -518,7 +519,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -546,7 +547,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -574,7 +575,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -602,7 +603,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
