--- a/VRChat/74/1381874.html
+++ b/VRChat/74/1381874.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rfcGPHUVhoz3x6q4/n/SRG//B8zRymCjYeJHIB0n/Jg="></script>
+    "SlqFMVO2wRkVXOlf8aOUHcKW6GqodP6pdgvtL92tsC4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VR用3Dモデル「2A-7/LC　(ニアナ/ライトカスタム)」","description":"■■オキュラスクエストを想定した2A-7の軽量化版です■■\n\n―――――――――――――――――――――――――――\n\n3Dのキャラ素材としてご使用ください。\nワールドで使ったり、シェーダーで使ったりして、それを再配布しても問題ありません。\n\n\nこちらは　クリエイティブ・コモンズ・ライセンス　の　「CC BY 4.0」です。\n(簡単に言うと原作者のクレジット記載さえあれば、何をしてもOK)\nワールド作成の賑やかし、ペデスタル、メッシュの改造して再配布などVR創作活動にご利用しても問題ありません。\n\n「CC BY 4.0」の詳細はこちらのサイト参照\nhttps://creativecommons.org/licenses/by/4.0/deed.ja\n\n―――――――――――――――――――――――――――\n\n◇内容物\n・unitypakage\n・改造用の全メッシュの入ったFBX\n・改造用テクスチャ\n\n―――――――――――――――――――――――――――\n\nツイッターで「#ニアナ」で呟いてくれると嬉しいです。\nあと機能など更新事項など自分がそれでアナウンスするかもしれません。\n\n―――――――――――――――――――――――――――\n\n大きな不具合がない限り対応は難しいですが、\n導入など分からない点がありましたらお気軽に質問してください。\n(自分の分かる範囲になります)\n\n連絡先は、\n　ツイッター(gaku2_sigehiro)\n　メール(sigehiro_summer@hotmail.com)\nになります。\n\n―――――――――――――――――――――――――――\n\n本モデルで発生した問題は基本的に受け付けておりませんが、連絡いただければ大体なんか実装していますのでお気軽にどうぞ。\n致命的なバグなどがありましたら修正致します。","url":"https://booth.pm/ja/items/1381874","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4e47d12-5c33-4226-982f-4671e408c771/i/1381874/6f6bcf83-627b-4606-b4ab-bc15b7069484_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rfcGPHUVhoz3x6q4/n/SRG//B8zRymCjYeJHIB0n/Jg="></script>
+    nonce="SlqFMVO2wRkVXOlf8aOUHcKW6GqodP6pdgvtL92tsC4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1381874/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1447
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1381874/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1447
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
