updated at: 2023-04-25 21:39, 【VRMのみ】NEKO FANTASY 村人 - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/07/1315907.html
+++ b/VRChat/07/1315907.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/+wwABY9mzMRLZwHKm5rYiRNMON0+Q/d/f7IZcnjx50="></script>
+    "3bO8IqvXUhvxWh5aWVx/ZXsCrjrtQl6piIvmXEyfDJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 村人","description":"[VRMのみ] アバター　「NEKO FANTASY 村人」\n\nポリゴン数：6134\n\nリップシンク対応\n感情表現はありません\n\n「all in one package 全部パック」は6種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\nunitypackageには6種類のねこ柄テクスチャ、8種類の服のテクスチャをセットしたマテリアルが入っています。\nUnityでVRM作成の知識がある方は\n好きな組み合わせで自分だけのねこちゃん村人が作れます。\n※なかなかハードルが高い作業なので、動画を作ってみました\n「村人ちゃんの服をUnityで変える！」\nhttps://youtu.be/ShQGz2Gk8Nk\n\n\n＜更新履歴＞\n2022.01.31　VRMのみの再販売を開始しました。","url":"https://booth.pm/ja/items/1315907","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1200"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1315907/1374a1b1-84c9-4293-8850-ec63b7c18ff7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/+wwABY9mzMRLZwHKm5rYiRNMON0+Q/d/f7IZcnjx50="></script>
+    nonce="3bO8IqvXUhvxWh5aWVx/ZXsCrjrtQl6piIvmXEyfDJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1315907/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1315907/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               169
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
