updated at: 2023-04-25 21:40, 『のらきゃっと』nora_cat_revolver『２歳誕生日記念モデル』 - シンヤの模造武具 - BOOTH

--- a/VRChat/71/1315471.html
+++ b/VRChat/71/1315471.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Cz+lXbtUYzogEmtCJsoiO1gP6RuZCeqG+hjXzdhr/FY="></script>
+    "CGiCJRd0ICfhFtiIpns/JuYqKI61PV4hf1SRVsTOVsw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『のらきゃっと』nora_cat_revolver『２歳誕生日記念モデル』","description":"のらきゃっとの２歳お誕生日をお祝いする記念モデルです。（ファンモデルです）\n\nのらきゃっとカラーだけでなく、ますきゃっとカラーもあるのでますきゃっとで楽しむこともできます！\n\nのらちゃん２歳おめでとう！\nのら！ちゃん！べりべりきゅーと！\n\n\n＊注意事項\n本モデルはファン同士での共有を目的として２次配布を許可していますが、販売は禁止です！　詳しくは規約のredomeを読んでください！\n\n量産型のらきゃっと\nhttps://noracat.booth.pm/items/1216498","url":"https://booth.pm/ja/items/1315471","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1315471/de73681f-2b75-420b-b458-06ccb9b6443a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Cz+lXbtUYzogEmtCJsoiO1gP6RuZCeqG+hjXzdhr/FY="></script>
+    nonce="CGiCJRd0ICfhFtiIpns/JuYqKI61PV4hf1SRVsTOVsw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1315471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              677
+                              676
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1315471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              677
+                              676
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
