--- a/VRChat/48/1316048.html
+++ b/VRChat/48/1316048.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7+EAbPfTwwqscaQzVmcysK9FtTW2cjfacTGkkHqQAKs="></script>
+    "9Kqxn4HhTvEiM6BZwSeBOcOPTlQhW/Jh7xJBbbAn0cQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Intel Core 2 Duo ベース CPU [2022Update]","description":"＜Version1.0の累計DLは64本でした。ご愛好ありがとうございます＞\n\n某伝説のCPUをモデリング！\n製品番号もお好きなコードに書き換えられます\n(GIMP2にて使用可能です)\n\n※前提ShaderがArktoonからpoiyomiに変更となりました。\n必ずC2Dの導入前にpoiyomi Shaderを導入して下さい※\nhttps://github.com/poiyomi/PoiyomiToonShader/releases/\n\nそれぞれローポリ版(68ポリ)とハイポリ版(1065ポリ)を用意しました。\nヒートスプレッダは取外し可能なので殻割りもどきも可能。\nなおクオリティに関しては保証ができないのでもし気に食わない所があれば各々で調整して下さい。","url":"https://booth.pm/ja/items/1316048","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/dc8505e6-9e5b-4a2a-a952-0e4e03651483/i/1316048/11822510-e0d3-4b70-94d2-8ce55bca4c1f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7+EAbPfTwwqscaQzVmcysK9FtTW2cjfacTGkkHqQAKs="></script>
+    nonce="9Kqxn4HhTvEiM6BZwSeBOcOPTlQhW/Jh7xJBbbAn0cQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1316048/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              79
+                              80
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1316048/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              79
+                              80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
