updated at: 2023-04-25 21:40, ふれんちひねひねどーなっつ - めいどのおへやSHOP - BOOTH

--- a/VRChat/70/1315870.html
+++ b/VRChat/70/1315870.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "q0CsY/xg6MxJQu3Ued3M9KdGH5g8EzQLAdNa4i7kagw="></script>
+    "WB4iQwBlKMis2//dZHnzKxVNWRDvAryuNeWIqYgMRYU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふれんちひねひねどーなっつ","description":"ふれんちくるくるどーなっつです！\nドーナッツにどうぞ","url":"https://booth.pm/ja/items/1315870","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9b8ff489-eb05-4473-b3c0-5d27aad2bde4/i/1315870/a9c62afd-d2cc-4283-85e0-ad788241e73b_base_resized.jpg"}
     </script>
@@ -84,16 +84,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q0CsY/xg6MxJQu3Ued3M9KdGH5g8EzQLAdNa4i7kagw="></script>
+    nonce="WB4iQwBlKMis2//dZHnzKxVNWRDvAryuNeWIqYgMRYU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -131,7 +130,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -172,7 +172,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1315870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -187,14 +187,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1315870/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
