updated at: 2023-04-25 21:41, 【YK&#39;s Atelier】エンブレム - YK&#39;s Atelier - BOOTH

--- a/VRChat/11/1314611.html
+++ b/VRChat/11/1314611.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "l/q2yJqSExJgR3IhGJGYhdmgbZC0k3b4uX/NUw5G2pI="></script>
+    "IPaMigggUFckOSh2aLoouv1lqdgZC6AkI5tz0Oweg+4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】エンブレム","description":"かっこかわいいエンブレム（店の看板等）を作りたくて作ってみました。\nnmapなど初めての試みなので、不具合がありましたら、ご連絡ください。\n\n収益化された動画、生放送へ等3Dモデルを使用、装着しての映り込みはOKです。\n\n色の変更は自由にしていただいて構いません。お好きな色にカスタマイズしてください。\n\nエンブレムの中心の猫に関しては、変えていただくことをお勧めします。\nお好きなグループのマーク、エンブレムなんでもOKです。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n▼ポリゴン数　\n　4,842ポリゴン\n\n▼内容物\n　Materialsフォルダ\n\tエンブレム.mat\n\tエンブレム.mat.meta\n\tエンブレム_リボン.mat\n\tエンブレム_リボン.mat.meta\n\tエンブレムマーク.mat\n\tエンブレムマーク.mat.meta\n\n　エンブレム.fbx\n\n　エンブレム_color.psd\n  エンブレム_nmap.png\n\n  エンブレム_None_color.psd\n  エンブレム_None_nmap.png\n\n  エンブレム_リボン_color.psd\n  エンブレム_リボン_nmap.png\n\n  エンブレムマーク.psd（例として猫の画像を入れてありますが、自由に置き換えてください。）\n\n▼マテリアル数\n　合計3つ\n\n禁止事項：再配布、転売、自作発言\n\n作者への連絡先\nTwitter: @yuuki19970920\nDiscord: ykReason#5239","url":"https://booth.pm/ja/items/1314611","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/1314611/e3b8287c-7650-4fa1-a0df-29a4bf04eaad_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l/q2yJqSExJgR3IhGJGYhdmgbZC0k3b4uX/NUw5G2pI="></script>
+    nonce="IPaMigggUFckOSh2aLoouv1lqdgZC6AkI5tz0Oweg+4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1314611/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1314611/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
