updated at: 2023-04-25 21:42, 隊長困惑顔アクリルキーホルダー - またいつか - BOOTH

--- a/VRChat/52/1314252.html
+++ b/VRChat/52/1314252.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XDKqFSaEDMTvJ4rdErjgJ3OdVcmORLFS4N4rFB4lOec="></script>
+    "S5WwigbO+ws8LqD3VFZ39QV7CKKuK02TPoDoljp+bWs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"隊長困惑顔アクリルキーホルダー","description":"この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nTwitterで好評連載中！VRChat体験記漫画の隊長のアクリルキーホルダーが遂に登場！（なぜなのか）第一弾は困惑顔！周囲に困惑するものを置いて隊長を困惑の渦に落とそう！\n\nVRChat体験記（漫画）↓\nhttps://twitter.com/rietzscha/status/1085751861376737280","url":"https://booth.pm/ja/items/1314252","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1090"},"image":"https://booth.pximg.net/c/620x620/5aa4ad1f-09ca-4316-86f9-8caea276a4ba/i/1314252/094740da-cccc-4061-9471-4d6f45df414d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XDKqFSaEDMTvJ4rdErjgJ3OdVcmORLFS4N4rFB4lOec="></script>
+    nonce="S5WwigbO+ws8LqD3VFZ39QV7CKKuK02TPoDoljp+bWs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1314252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1314252/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -343,7 +344,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023-05-16</span>
                                       </div>
                                     </div>
                                   </div>
