updated at: 2023-04-25 21:42, 【特売品(無料)】バナナ（パーティクル付き） - ShimaeWorkShop - BOOTH

--- a/VRChat/31/1314131.html
+++ b/VRChat/31/1314131.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0lHvz+lpQL3FiSzrCfNbtuAUt0+L50qFAI6SW9cFiCo="></script>
+    "DdyIPwLgSAetw7Xe14uBYEWPk6aId6hZ/3JNaAoLa5w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【特売品(無料)】バナナ（パーティクル付き）","description":"【特売品！】\n\nバラ売りバナナがまるごと一本！\n\n今ならワールドパーティクルもついてくる！\n\nお買い得バナナ！熟して食べごろ！\n\n今回はFBX！PSD！サイズ調整済みPrefab！\nパーティクルPrefabのセット！\n\nポリゴン数　△352\n\n※一部撮影にはMnmrShader2.0を使用しました。\n\n【アップデート情報】\nバナナの皮の角を追加しました。","url":"https://booth.pm/ja/items/1314131","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b96a0129-aca5-4325-bfe4-0d8a349c5b10/i/1314131/71ae4821-6f9e-4953-96c6-30e1bfc5b4c6_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0lHvz+lpQL3FiSzrCfNbtuAUt0+L50qFAI6SW9cFiCo="></script>
+    nonce="DdyIPwLgSAetw7Xe14uBYEWPk6aId6hZ/3JNaAoLa5w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1314131/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1314131/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
